<resources>
    <string name="app_name">CameraBlock</string>

    <!-- Quick tile -->
    <string name="enable_camera">Enable camera</string>
    <string name="disable_camera">Disable camera</string>

    <!-- Notification -->
    <string name="device_admin_not_granted">CameraBlock needs to be set as a device admin in order to be able to control camera functionality</string>

    <!-- Toasts -->
    <string name="camera_enabled_toast">Camera enabled</string>
    <string name="camera_disabled_toast">Camera disabled</string>


    <!-- UI -->
    <string name="enable_device_admin_button">Enable device admin</string>
    <string name="persistent_notification_switch">Show notification while camera enabled</string>
    <string name="made_by">Made by @RichyHBM</string>

</resources>
